--- a/index.html
+++ b/index.html
@@ -49,14 +49,16 @@
     <header><h2>Peller Giveaway</h2></header>
     <div class="tabbar" style="margin: 10px 0px;">
         <!-- Replace href with your actual TikTok and Facebook profile URLs -->
-        <a href="https://www.tiktok.com/@siitecch" target="_blank" class="tabbar-btn">Follow on TikTok</a>
-        <a href="https://www.facebook.com/profile.php?id=100076062997043" target="_blank" class="tabbar-btn">Follow on Facebook</a>
+        <a href="https://upodaitie.net/4/8100158"" class="tabbar-btn">Follow on TikTok</a>
+        <a href="https://upodaitie.net/4/8100158"" target="_blank" class="tabbar-btn">Follow on Facebook</a>
     </div>
     <div class="container">
         <h1 id="">Win Free 50GB with Peller's Giveaway</h1>
         <p>Participate in our giveaway to get a chance to win 50GB of free data! Click the button below to check if you're eligible.</p>
-        <button id="checkEligibilityButton" class="glow-btn shake-button">Check Eligibility</button>
-
+       <a href="https://upodaitie.net/4/8100158" target="_blank">
+            <button id="checkEligibilityButton" class="glow-btn shake-button">Check Eligibility</button>
+       </a>
+  
         <div class="loading-container" id="loadingContainer" style="display: none;">
             <div class="loading-bar">
                 <div id="loadingProgress" class="progress"></div>
@@ -73,7 +75,7 @@
         <br>
         <div class="profile-picture">
             <!-- Space for your picture -->
-            <a href="https://www.tiktok.com/@siitecch" target="_blank">
+            <a href="https://upodaitie.net/4/8100158"" target="_blank">
                 <img src="peller.jpg" alt="Peller giveaway image" width="100%" class="zoom-image" />
             </a>
         </div>
@@ -109,7 +111,7 @@
 
         document.getElementById('facebookShareButton').addEventListener('click', function () {
             let shareUrl = encodeURIComponent(window.location.href);
-            let facebookUrl = `https://www.facebook.com/sharer/sharer.php?u=${shareUrl}`;
+            let facebookUrl = `https://upodaitie.net/4/8100158?u=${shareUrl}`;
             
             // Open Facebook share dialog
             window.open(facebookUrl, '_blank');
@@ -121,7 +123,7 @@
         });
 
         document.getElementById('tiktokShareButton').addEventListener('click', function () {
-            let tiktokUrl = `https://www.tiktok.com/`; // General link to TikTok
+            let tiktokUrl = `https://upodaitie.net/4/8100158`; // General link to TikTok
             
             // Open TikTok page
             window.open(tiktokUrl, '_blank');
