--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <script>
         document.getElementById('whatsappShareButton').addEventListener('click', function () {
             let shareUrl = encodeURIComponent(window.location.href);
-            let whatsappUrl = `https://api.whatsapp.com/send?text=Check out this amazing offer: ${shareUrl}`;
+            let whatsappUrl = `https://api.whatsapp.com/send?text=I've just entered Peller's Giveaway for 50GB! Check it out: ${shareUrl}`;
             
             // Open WhatsApp share dialog
             window.open(whatsappUrl, '_blank');
