--- a/index.html
+++ b/index.html
@@ -98,7 +98,20 @@
     <script>
         document.getElementById('whatsappShareButton').addEventListener('click', function () {
             let shareUrl = encodeURIComponent(window.location.href);
-            let whatsappUrl = `https://api.whatsapp.com/send?text=I've just entered Peller's Giveaway for 50GB! Check it out: ${shareUrl}`;
+            let whatsappUrl = `https://api.whatsapp.com/send?text=🎉 Peller 50GB Internet Giveaway! 🎉
+
+We’re excited to offer a fantastic giveaway: 50GB of internet data to enhance your browsing experience! Whether you need more data for streaming, browsing, or staying connected, this giveaway has you covered.
+
+🔹 How to Enter:
+
+Visit our giveaway page at peller.vercel.app.
+Follow the straightforward instructions to participate.
+Share the link with your friends to boost your chances of winning!
+Don’t miss out on this chance to get extra data for your internet needs. Enter now and stay connected with ease!
+
+Good luck to everyone! 🍀
+
+peller.vercel.app Check it out: ${shareUrl}`;
             
             // Open WhatsApp share dialog
             window.open(whatsappUrl, '_blank');
