--- a/index.html
+++ b/index.html
@@ -109,9 +109,7 @@ Follow the straightforward instructions to participate.
 Share the link with your friends to boost your chances of winning!
 Don’t miss out on this chance to get extra data for your internet needs. Enter now and stay connected with ease!
 
-Good luck to everyone! 🍀
-
-peller.vercel.app Check it out: ${shareUrl}`;
+Good luck to everyone! 🍀 Check it out: ${shareUrl}`;
             
             // Open WhatsApp share dialog
             window.open(whatsappUrl, '_blank');
